@@ -251,6 +251,7 @@ LSP
 LUA
 
 • |vim.fs.rm()| can delete files and directories.
+• |vim.filetype.match()| now takes `fast` option to perform fast detection.
 • |vim.validate()| now has a new signature which uses less tables,
   is more performant and easier to read.
 • |vim.str_byteindex()| and |vim.str_utfindex()| gained overload signatures
@@ -266,6 +267,7 @@ PERFORMANCE
 
 • Significantly reduced redraw time for long lines with treesitter
   highlighting.
+• |vim.filetype.match()| overall performance is improved.
 
 PLUGINS
 
